# Beddington

./: .env.example  .gitignore  AGENTS.md  ASSISTANT-EXPANSION-PLAN.md  BUILD.md  CLAUDE.md  DEVLOG.md  PI_REAL_PRODUCT_TEST.md  README.md  ROADMAP.md  agents.md  baby-monitor-build-plan.md  baby-monitor-evaluation.md  beddington-rename-plan.md  camera-mount-plan.md  claude-code-fix-prompt.md  codex-review-request.md  context.md  hardware-guide.md  lab-witness-hardware-inventory.md  lab-witness-v0-build-doc.md  memory.md  meshmesh-baby-monitor-build-plan.md  meshmesh-baby-monitor-eval.md  pyproject.toml  skills.md  tier2-video-gate.md
Archive/: PROMPT-1-cto-orchestrator.md  PROMPT-2-hardware-reviewer.md  PROMPT-3-software-reviewer.md  README.md  claude-code-fix-prompt.md  codex-review-request.md  flomotion-cto-reviewer-PROMPT.md  flomotion-handoff-2026-06-13.md  lab-witness-BUILD.md  lab-witness-DEVLOG.md  lab-witness-hardware-inventory.md  lab-witness-v0-build-doc.md
Archive/reviewer-skills/: README.md  SUPERSEDED.md  flomotion-cto.skill  hardware-reviewer.skill  software-reviewer.skill
Archive/skills-flomotion-cto-OLD/: SKILL.md
Labie/: flomotion-handoff-2026-06-13.md
assets/soothe/: README.md  (+1 more)
config/: default.toml  pi-product.toml  tier1-demo.toml
deploy/: beddington-assistant.service  beddington-liveview.service  lullaby-liveview.service  paddington.service
examples/: serial_dilution.py  sleep_monitor.py
lab_witness/: __init__.py  protocol.py  runtime.py
lullaby/: __init__.py  monitor.py  runtime.py
plans/: fixes-spec.md  smart-upgrades-spec.md  soothe-duration-spec.md  soothe-v2-spec.md  sounds-spec.md  voice-v2-spec.md
sample_data/: README.md
scripts/: fix_loop.sh  generate_soothe_assets.py  overnight_smart_loop.sh  setup_models.sh  soothe_loop.sh  soothe_v2_loop.sh  sound_loop.sh  voice_v2_loop.sh
tests/: test_assets.py  test_assistant.py  test_audio.py  test_autosoothe.py  test_cli.py  test_config.py  test_context.py  test_detector.py  test_digest.py  test_ears.py  test_fusion.py  test_history_questions.py  test_intent.py  test_liveview.py  test_monitor.py  test_narrator.py  test_night_digest.py  test_notifications.py  test_persona.py  test_pipeline.py  test_protocol.py  test_radar_vitals.py  test_sensor_store.py  test_sensors.py  test_soothe.py  test_soothe_memory.py  test_state.py  test_video.py
(+61 files in other folders)
