[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lullaby"
dynamic = ["version"]
description = "Privacy-first baby-monitor companion with deterministic local check alerts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
pi = ["opencv-python-headless", "numpy"]

[tool.setuptools]
packages = ["lullaby"]

[tool.setuptools.dynamic]
version = { attr = "lullaby.__version__" }
