[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lullaby-monitor"
version = "0.1.0"
description = "Privacy-first, local baby-cry event logging and morning digests"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "ai-edge-litert>=2.1,<3",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
mic = ["sounddevice>=0.5,<0.6"]
ears = ["faster-whisper>=1.0,<2"]
dev = ["pytest>=9,<10"]

[project.scripts]
lullaby = "lullaby.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lullaby"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
